国家タグ関連コード自動追加

--- a/localisation/english/map/country_names/geacps_country_names__l_english.yml
+++ b/localisation/english/map/country_names/geacps_country_names__l_english.yml
@@ -1965,6 +1965,10 @@
  ZPR_DEF: "Zaporizhzhia"
  ZPR_ADJ: "Zaporizhzhian"
  
+ TRS: "Trieste"
+ TRS_DEF: "Trieste"
+ TRS_ADJ: "Triestine"
+ 
 #アフリカ:
  AFR: "Africa"
  AFR_DEF: "Africa"
@@ -2274,6 +2278,14 @@
  WIW: "Windward Islands"
  WIW_DEF: "Windward Islands"
  WIW_ADJ: "Windward Islander"
+ 
+ PTG: "Patagonia"
+ PTG_DEF: "Patagonia"
+ PTG_ADJ: "Patagonian"
+ 
+ ARC: "Araucania"
+ ARC_DEF: "Araucania"
+ ARC_ADJ: "Araucanian"
  
 #大洋州:
  ATC: "Antarctica"
