--- a/localisation/english/map/country_names/geacps_country_names_cosmetic_l_english.yml
+++ b/localisation/english/map/country_names/geacps_country_names_cosmetic_l_english.yml
@@ -690,6 +690,12 @@
  ITA_republic: "Italian Republic"
  ITA_republic_DEF: "the The Italian Republic"
  ITA_republic_ADJ: "Italian"
+ ITA_republic_0_0: "Italian Republic"
+ ITA_republic_0_0_DEF: "the The Italian Republic"
+ ITA_republic_0_0_ADJ: "Italian"
+ ITA_republic_0_1: "Italian Republic"
+ ITA_republic_0_1_DEF: "the The Italian Republic"
+ ITA_republic_0_1_ADJ: "Italian"
  ITA_social_republic: "Italian Social Republic"
  ITA_social_republic_DEF: "the The Italian Social Republic"
  ITA_social_republic_ADJ: "Italian"
@@ -1309,6 +1315,13 @@
  AMERICA_united_states_100: "United States of America"
  AMERICA_united_states_100_DEF: "the The United States of America"
  AMERICA_united_states_100_ADJ: "American"
+ 
+ ARCandPTG: "Araucania and Patagonia"
+ ARCandPTG_DEF: "Araucania and Patagonia"
+ ARCandPTG_ADJ: "Araucanian and Patagonian"
+ ARCandPTG_kingdom: "Kingdom of Araucania and Patagonia"
+ ARCandPTG_kingdom_DEF: "the The Kingdom of Araucania and Patagonia"
+ ARCandPTG_kingdom_ADJ: "Araucanian and Patagonian"
  
  NEWGRANADA: "New Granada"
  NEWGRANADA_DEF: "New Granada"
