--- a/localisation/english/map/country_names/geacps_country_names_form_l_english.yml
+++ b/localisation/english/map/country_names/geacps_country_names_form_l_english.yml
@@ -695,6 +695,10 @@
  ITA_kingdom_DEF: "the The Kingdom of Italy"
  ITA_republic: "Italian Republic"
  ITA_republic_DEF: "the The Italian Republic"
+ ITA_republic_0_0: "Italian Republic"
+ ITA_republic_0_0_DEF: "the The Italian Republic"
+ ITA_republic_0_1: "Italian Republic"
+ ITA_republic_0_1_DEF: "the The Italian Republic"
  ITA_social_republic: "Italian Social Republic"
  ITA_social_republic_DEF: "the The Italian Social Republic"
  ITA_united_provinces: "Italian United Provinces"
@@ -2204,6 +2208,8 @@
  ZHI_suweiai_government: "Zhili Soviet Goverment"
  ZHI_suweiai_government_DEF: "the The Zhili Soviet Goverment"
  
+ SUL_republic: "Republic of Sulu"
+ SUL_republic_DEF: "the The Republic of Sulu"
  SUL_sultanate: "Sultanate of Sulu"
  SUL_sultanate_DEF: "the The Sultanate of Sulu"
  
@@ -2644,6 +2650,8 @@
  
  SIB_cossack_republic: "Siberian Cossack Republic"
  SIB_cossack_republic_DEF: "the The Siberian Cossack Republic"
+ SIB_democratic_republic: "Siberian Democratic Republic"
+ SIB_democratic_republic_DEF: "the The Siberian Democratic Republic"
  SIB_republic: "Siberian Republic"
  SIB_republic_DEF: "the The Siberian Republic"
  
@@ -2749,6 +2757,11 @@
  ZPR_cossack_republic_DEF: "the The Zaporizhzhian Cossack Republic"
  ZPR_republic: "Zaporizhzhian Republic"
  ZPR_republic_DEF: "the The Zaporizhzhian Republic"
+ 
+ TRS_free_territory: "Free Territory of Trieste"
+ TRS_free_territory_DEF: "the The Free Territory of Trieste"
+ TRS_republic: "Republic of Trieste"
+ TRS_republic_DEF: "the The Republic of Trieste"
  
 #アフリカ:
  AFR_republic: "African Republic"
@@ -3062,6 +3075,12 @@
  WIW_federation_DEF: "the The Federation of Windward Islands"
  WIW_republic: "Republic of Windward Islands"
  WIW_republic_DEF: "the The Republic of Windward Islands"
+ 
+ PTG_republic: "Republic of Patagonia"
+ PTG_republic_DEF: "the The Republic of Patagonia"
+ 
+ ARC_republic: "Republic of Araucania"
+ ARC_republic_DEF: "the The Republic of Araucania"
  
 #大洋州:
  ATC_republic: "Republic of Antarctica"
