--- a/localisation/english/map/country_names/geacps_dependent_territory_names_1_l_english.yml
+++ b/localisation/english/map/country_names/geacps_dependent_territory_names_1_l_english.yml
@@ -21078,6 +21078,49 @@
  ZPR_leased_territory_DEF: "the The $OVERLORDADJ$ Zaporizhzhia"
  ZPR_leased_territory_ADJ: "$OVERLORD$ Zaporizhzhian"
  
+ TRS_colony: "$OVERLORDADJ$ Colony of Trieste"
+ TRS_colony_DEF: "the The $OVERLORDADJ$ Colony of Trieste"
+ TRS_colony_ADJ: "$OVERLORD$ Triestine"
+ TRS_colonies_federation: "$OVERLORDADJ$ Federal Colony of Trieste"
+ TRS_colonies_federation_DEF: "the The $OVERLORDADJ$ Federal Colony of Trieste"
+ TRS_colonies_federation_ADJ: "$OVERLORD$ Triestine"
+ TRS_colony_and_protected_territory: "$OVERLORDADJ$ Colony and Protectorate of Trieste"
+ TRS_colony_and_protected_territory_DEF: "the The $OVERLORDADJ$ Colony and Protectorate of Trieste"
+ TRS_colony_and_protected_territory_ADJ: "$OVERLORD$ Triestine"
+ TRS_condominium: "Condominium of Trieste"
+ TRS_condominium_DEF: "the The Condominium of Trieste"
+ TRS_condominium_ADJ: "$OVERLORD$ Triestine"
+ TRS_overseas_territory: "$OVERLORDADJ$ Trieste"
+ TRS_overseas_territory_DEF: "the The $OVERLORDADJ$ Trieste"
+ TRS_overseas_territory_ADJ: "$OVERLORD$ Triestine"
+ TRS_viceroyalty: "Viceroyalty of Trieste"
+ TRS_viceroyalty_DEF: "the The Viceroyalty of Trieste"
+ TRS_viceroyalty_ADJ: "$OVERLORD$ Triestine"
+ TRS_captaincy_general: "Captaincy General of Trieste"
+ TRS_captaincy_general_DEF: "the The Captaincy General of Trieste"
+ TRS_captaincy_general_ADJ: "$OVERLORD$ Triestine"
+ TRS_protected_territory: "$OVERLORDADJ$ Protectorate of Trieste"
+ TRS_protected_territory_DEF: "the The $OVERLORDADJ$ Protectorate of Trieste"
+ TRS_protected_territory_ADJ: "$OVERLORD$ Triestine"
+ TRS_constituent_autonomous_province: "$OVERLORDADJ$ Province of Trieste"
+ TRS_constituent_autonomous_province_DEF: "the The $OVERLORDADJ$ Province of Trieste"
+ TRS_constituent_autonomous_province_ADJ: "$OVERLORD$ Triestine"
+ TRS_trust_territory: "$OVERLORDADJ$ Trust Territory of Trieste"
+ TRS_trust_territory_DEF: "the The $OVERLORDADJ$ Trust Territory of Trieste"
+ TRS_trust_territory_ADJ: "$OVERLORD$ Triestine"
+ TRS_mandated_territory_A: "$OVERLORDADJ$ Mandate Territory of Trieste"
+ TRS_mandated_territory_A_DEF: "the The $OVERLORDADJ$ Mandate Territory of Trieste"
+ TRS_mandated_territory_A_ADJ: "$OVERLORD$ Triestine"
+ TRS_mandated_territory_B: "$OVERLORDADJ$ Mandate Territory of Trieste"
+ TRS_mandated_territory_B_DEF: "the The $OVERLORDADJ$ Mandate Territory of Trieste"
+ TRS_mandated_territory_B_ADJ: "$OVERLORD$ Triestine"
+ TRS_mandated_territory_C: "$OVERLORDADJ$ Mandate Territory of Trieste"
+ TRS_mandated_territory_C_DEF: "the The $OVERLORDADJ$ Mandate Territory of Trieste"
+ TRS_mandated_territory_C_ADJ: "$OVERLORD$ Triestine"
+ TRS_leased_territory: "$OVERLORDADJ$ Trieste"
+ TRS_leased_territory_DEF: "the The $OVERLORDADJ$ Trieste"
+ TRS_leased_territory_ADJ: "$OVERLORD$ Triestine"
+ 
 #アフリカ:
  AFR_colony: "$OVERLORDADJ$ Colony of Africa"
  AFR_colony_DEF: "the The $OVERLORDADJ$ Colony of Africa"
@@ -24390,6 +24433,92 @@
  WIW_leased_territory: "$OVERLORDADJ$ Windward Islands"
  WIW_leased_territory_DEF: "the The $OVERLORDADJ$ Windward Islands"
  WIW_leased_territory_ADJ: "$OVERLORD$ Windward Islander"
+ 
+ PTG_colony: "$OVERLORDADJ$ Colony of Patagonia"
+ PTG_colony_DEF: "the The $OVERLORDADJ$ Colony of Patagonia"
+ PTG_colony_ADJ: "$OVERLORD$ Patagonian"
+ PTG_colonies_federation: "$OVERLORDADJ$ Federal Colony of Patagonia"
+ PTG_colonies_federation_DEF: "the The $OVERLORDADJ$ Federal Colony of Patagonia"
+ PTG_colonies_federation_ADJ: "$OVERLORD$ Patagonian"
+ PTG_colony_and_protected_territory: "$OVERLORDADJ$ Colony and Protectorate of Patagonia"
+ PTG_colony_and_protected_territory_DEF: "the The $OVERLORDADJ$ Colony and Protectorate of Patagonia"
+ PTG_colony_and_protected_territory_ADJ: "$OVERLORD$ Patagonian"
+ PTG_condominium: "Condominium of Patagonia"
+ PTG_condominium_DEF: "the The Condominium of Patagonia"
+ PTG_condominium_ADJ: "$OVERLORD$ Patagonian"
+ PTG_overseas_territory: "$OVERLORDADJ$ Patagonia"
+ PTG_overseas_territory_DEF: "the The $OVERLORDADJ$ Patagonia"
+ PTG_overseas_territory_ADJ: "$OVERLORD$ Patagonian"
+ PTG_viceroyalty: "Viceroyalty of Patagonia"
+ PTG_viceroyalty_DEF: "the The Viceroyalty of Patagonia"
+ PTG_viceroyalty_ADJ: "$OVERLORD$ Patagonian"
+ PTG_captaincy_general: "Captaincy General of Patagonia"
+ PTG_captaincy_general_DEF: "the The Captaincy General of Patagonia"
+ PTG_captaincy_general_ADJ: "$OVERLORD$ Patagonian"
+ PTG_protected_territory: "$OVERLORDADJ$ Protectorate of Patagonia"
+ PTG_protected_territory_DEF: "the The $OVERLORDADJ$ Protectorate of Patagonia"
+ PTG_protected_territory_ADJ: "$OVERLORD$ Patagonian"
+ PTG_constituent_autonomous_province: "$OVERLORDADJ$ Province of Patagonia"
+ PTG_constituent_autonomous_province_DEF: "the The $OVERLORDADJ$ Province of Patagonia"
+ PTG_constituent_autonomous_province_ADJ: "$OVERLORD$ Patagonian"
+ PTG_trust_territory: "$OVERLORDADJ$ Trust Territory of Patagonia"
+ PTG_trust_territory_DEF: "the The $OVERLORDADJ$ Trust Territory of Patagonia"
+ PTG_trust_territory_ADJ: "$OVERLORD$ Patagonian"
+ PTG_mandated_territory_A: "$OVERLORDADJ$ Mandate Territory of Patagonia"
+ PTG_mandated_territory_A_DEF: "the The $OVERLORDADJ$ Mandate Territory of Patagonia"
+ PTG_mandated_territory_A_ADJ: "$OVERLORD$ Patagonian"
+ PTG_mandated_territory_B: "$OVERLORDADJ$ Mandate Territory of Patagonia"
+ PTG_mandated_territory_B_DEF: "the The $OVERLORDADJ$ Mandate Territory of Patagonia"
+ PTG_mandated_territory_B_ADJ: "$OVERLORD$ Patagonian"
+ PTG_mandated_territory_C: "$OVERLORDADJ$ Mandate Territory of Patagonia"
+ PTG_mandated_territory_C_DEF: "the The $OVERLORDADJ$ Mandate Territory of Patagonia"
+ PTG_mandated_territory_C_ADJ: "$OVERLORD$ Patagonian"
+ PTG_leased_territory: "$OVERLORDADJ$ Patagonia"
+ PTG_leased_territory_DEF: "the The $OVERLORDADJ$ Patagonia"
+ PTG_leased_territory_ADJ: "$OVERLORD$ Patagonian"
+ 
+ ARC_colony: "$OVERLORDADJ$ Colony of Araucania"
+ ARC_colony_DEF: "the The $OVERLORDADJ$ Colony of Araucania"
+ ARC_colony_ADJ: "$OVERLORD$ Araucanian"
+ ARC_colonies_federation: "$OVERLORDADJ$ Federal Colony of Araucania"
+ ARC_colonies_federation_DEF: "the The $OVERLORDADJ$ Federal Colony of Araucania"
+ ARC_colonies_federation_ADJ: "$OVERLORD$ Araucanian"
+ ARC_colony_and_protected_territory: "$OVERLORDADJ$ Colony and Protectorate of Araucania"
+ ARC_colony_and_protected_territory_DEF: "the The $OVERLORDADJ$ Colony and Protectorate of Araucania"
+ ARC_colony_and_protected_territory_ADJ: "$OVERLORD$ Araucanian"
+ ARC_condominium: "Condominium of Araucania"
+ ARC_condominium_DEF: "the The Condominium of Araucania"
+ ARC_condominium_ADJ: "$OVERLORD$ Araucanian"
+ ARC_overseas_territory: "$OVERLORDADJ$ Araucania"
+ ARC_overseas_territory_DEF: "the The $OVERLORDADJ$ Araucania"
+ ARC_overseas_territory_ADJ: "$OVERLORD$ Araucanian"
+ ARC_viceroyalty: "Viceroyalty of Araucania"
+ ARC_viceroyalty_DEF: "the The Viceroyalty of Araucania"
+ ARC_viceroyalty_ADJ: "$OVERLORD$ Araucanian"
+ ARC_captaincy_general: "Captaincy General of Araucania"
+ ARC_captaincy_general_DEF: "the The Captaincy General of Araucania"
+ ARC_captaincy_general_ADJ: "$OVERLORD$ Araucanian"
+ ARC_protected_territory: "$OVERLORDADJ$ Protectorate of Araucania"
+ ARC_protected_territory_DEF: "the The $OVERLORDADJ$ Protectorate of Araucania"
+ ARC_protected_territory_ADJ: "$OVERLORD$ Araucanian"
+ ARC_constituent_autonomous_province: "$OVERLORDADJ$ Province of Araucania"
+ ARC_constituent_autonomous_province_DEF: "the The $OVERLORDADJ$ Province of Araucania"
+ ARC_constituent_autonomous_province_ADJ: "$OVERLORD$ Araucanian"
+ ARC_trust_territory: "$OVERLORDADJ$ Trust Territory of Araucania"
+ ARC_trust_territory_DEF: "the The $OVERLORDADJ$ Trust Territory of Araucania"
+ ARC_trust_territory_ADJ: "$OVERLORD$ Araucanian"
+ ARC_mandated_territory_A: "$OVERLORDADJ$ Mandate Territory of Araucania"
+ ARC_mandated_territory_A_DEF: "the The $OVERLORDADJ$ Mandate Territory of Araucania"
+ ARC_mandated_territory_A_ADJ: "$OVERLORD$ Araucanian"
+ ARC_mandated_territory_B: "$OVERLORDADJ$ Mandate Territory of Araucania"
+ ARC_mandated_territory_B_DEF: "the The $OVERLORDADJ$ Mandate Territory of Araucania"
+ ARC_mandated_territory_B_ADJ: "$OVERLORD$ Araucanian"
+ ARC_mandated_territory_C: "$OVERLORDADJ$ Mandate Territory of Araucania"
+ ARC_mandated_territory_C_DEF: "the The $OVERLORDADJ$ Mandate Territory of Araucania"
+ ARC_mandated_territory_C_ADJ: "$OVERLORD$ Araucanian"
+ ARC_leased_territory: "$OVERLORDADJ$ Araucania"
+ ARC_leased_territory_DEF: "the The $OVERLORDADJ$ Araucania"
+ ARC_leased_territory_ADJ: "$OVERLORD$ Araucanian"
  
 #大洋州:
  ATC_colony: "$OVERLORDADJ$ Colony of Antarctica"
