--- a/localisation/english/map/country_names/geacps_dependent_territory_names_CHI_l_english.yml
+++ b/localisation/english/map/country_names/geacps_dependent_territory_names_CHI_l_english.yml
@@ -3432,6 +3432,13 @@
  ZPR_CHI_autonomous_province_DEF: "the The Zaporizhzhian Province"
  ZPR_CHI_autonomous_province_ADJ: "$OVERLORD$ Zaporizhzhian"
  
+ TRS_CHI_autonomous_military_clique: "Triestine Clique"
+ TRS_CHI_autonomous_military_clique_DEF: "the The Triestine Clique"
+ TRS_CHI_autonomous_military_clique_ADJ: "$OVERLORD$ Triestine"
+ TRS_CHI_autonomous_province: "Triestine Province"
+ TRS_CHI_autonomous_province_DEF: "the The Triestine Province"
+ TRS_CHI_autonomous_province_ADJ: "$OVERLORD$ Triestine"
+ 
 #アフリカ:
  AFR_CHI_autonomous_military_clique: "African Clique"
  AFR_CHI_autonomous_military_clique_DEF: "the The African Clique"
@@ -3972,6 +3979,20 @@
  WIW_CHI_autonomous_province: "Windward Islander Province"
  WIW_CHI_autonomous_province_DEF: "the The Windward Islander Province"
  WIW_CHI_autonomous_province_ADJ: "$OVERLORD$ Windward Islander"
+ 
+ PTG_CHI_autonomous_military_clique: "Patagonian Clique"
+ PTG_CHI_autonomous_military_clique_DEF: "the The Patagonian Clique"
+ PTG_CHI_autonomous_military_clique_ADJ: "$OVERLORD$ Patagonian"
+ PTG_CHI_autonomous_province: "Patagonian Province"
+ PTG_CHI_autonomous_province_DEF: "the The Patagonian Province"
+ PTG_CHI_autonomous_province_ADJ: "$OVERLORD$ Patagonian"
+ 
+ ARC_CHI_autonomous_military_clique: "Araucanian Clique"
+ ARC_CHI_autonomous_military_clique_DEF: "the The Araucanian Clique"
+ ARC_CHI_autonomous_military_clique_ADJ: "$OVERLORD$ Araucanian"
+ ARC_CHI_autonomous_province: "Araucanian Province"
+ ARC_CHI_autonomous_province_DEF: "the The Araucanian Province"
+ ARC_CHI_autonomous_province_ADJ: "$OVERLORD$ Araucanian"
  
 #大洋州:
  ATC_CHI_autonomous_military_clique: "Antarctic Clique"
