--- a/localisation/english/map/country_names/geacps_dependent_territory_names_GBR_l_english.yml
+++ b/localisation/english/map/country_names/geacps_dependent_territory_names_GBR_l_english.yml
@@ -1696,6 +1696,9 @@
  ZPR_dominion: "Dominion of Zaporizhzhia"
  ZPR_dominion_DEF: "the The Dominion of Zaporizhzhia"
  
+ TRS_dominion: "Dominion of Trieste"
+ TRS_dominion_DEF: "the The Dominion of Trieste"
+ 
 #アフリカ:
  AFR_dominion: "Dominion of Africa"
  AFR_dominion_DEF: "the The Dominion of Africa"
@@ -1928,6 +1931,12 @@
  
  WIW_dominion: "Dominion of Windward Islands"
  WIW_dominion_DEF: "the The Dominion of Windward Islands"
+ 
+ PTG_dominion: "Dominion of Patagonia"
+ PTG_dominion_DEF: "the The Dominion of Patagonia"
+ 
+ ARC_dominion: "Dominion of Araucania"
+ ARC_dominion_DEF: "the The Dominion of Araucania"
  
 #大洋州:
  ATC_dominion: "Dominion of Antarctica"
