--- a/localisation/english/map/country_names/geacps_dependent_territory_names_GER_l_english.yml
+++ b/localisation/english/map/country_names/geacps_dependent_territory_names_GER_l_english.yml
@@ -7833,6 +7833,22 @@
  ZPR_reichsland_DEF: "the The Reichsland Zaporizhzhia"
  ZPR_reichsland_ADJ: "$OVERLORD$ Zaporizhzhian"
  
+ TRS_reichsprotectorate: "Protektorat Trieste"
+ TRS_reichsprotectorate_DEF: "the The Protektorat Trieste"
+ TRS_reichsprotectorate_ADJ: "$OVERLORD$ Triestine"
+ TRS_reichsgeneralgovernorate: "Generalgouvernement der Trieste"
+ TRS_reichsgeneralgovernorate_DEF: "the The Generalgouvernement der Trieste"
+ TRS_reichsgeneralgovernorate_ADJ: "$OVERLORD$ Triestine"
+ TRS_reichskommissariat: "Reichskommissariat Trieste"
+ TRS_reichskommissariat_DEF: "the The Reichskommissariat Trieste"
+ TRS_reichskommissariat_ADJ: "$OVERLORD$ Triestine"
+ TRS_reichskolonie: "Reichskolonie Trieste"
+ TRS_reichskolonie_DEF: "the The Reichskolonie Trieste"
+ TRS_reichskolonie_ADJ: "$OVERLORD$ Triestine"
+ TRS_reichsland: "Reichsland Trieste"
+ TRS_reichsland_DEF: "the The Reichsland Trieste"
+ TRS_reichsland_ADJ: "$OVERLORD$ Triestine"
+ 
 #アフリカ:
  AFR_reichsprotectorate: "Protektorat Africa"
  AFR_reichsprotectorate_DEF: "the The Protektorat Africa"
@@ -9066,6 +9082,38 @@
  WIW_reichsland: "Reichsland Windward Islands"
  WIW_reichsland_DEF: "the The Reichsland Windward Islands"
  WIW_reichsland_ADJ: "$OVERLORD$ Windward Islander"
+ 
+ PTG_reichsprotectorate: "Protektorat Patagonia"
+ PTG_reichsprotectorate_DEF: "the The Protektorat Patagonia"
+ PTG_reichsprotectorate_ADJ: "$OVERLORD$ Patagonian"
+ PTG_reichsgeneralgovernorate: "Generalgouvernement der Patagonia"
+ PTG_reichsgeneralgovernorate_DEF: "the The Generalgouvernement der Patagonia"
+ PTG_reichsgeneralgovernorate_ADJ: "$OVERLORD$ Patagonian"
+ PTG_reichskommissariat: "Reichskommissariat Patagonia"
+ PTG_reichskommissariat_DEF: "the The Reichskommissariat Patagonia"
+ PTG_reichskommissariat_ADJ: "$OVERLORD$ Patagonian"
+ PTG_reichskolonie: "Reichskolonie Patagonia"
+ PTG_reichskolonie_DEF: "the The Reichskolonie Patagonia"
+ PTG_reichskolonie_ADJ: "$OVERLORD$ Patagonian"
+ PTG_reichsland: "Reichsland Patagonia"
+ PTG_reichsland_DEF: "the The Reichsland Patagonia"
+ PTG_reichsland_ADJ: "$OVERLORD$ Patagonian"
+ 
+ ARC_reichsprotectorate: "Protektorat Araucania"
+ ARC_reichsprotectorate_DEF: "the The Protektorat Araucania"
+ ARC_reichsprotectorate_ADJ: "$OVERLORD$ Araucanian"
+ ARC_reichsgeneralgovernorate: "Generalgouvernement der Araucania"
+ ARC_reichsgeneralgovernorate_DEF: "the The Generalgouvernement der Araucania"
+ ARC_reichsgeneralgovernorate_ADJ: "$OVERLORD$ Araucanian"
+ ARC_reichskommissariat: "Reichskommissariat Araucania"
+ ARC_reichskommissariat_DEF: "the The Reichskommissariat Araucania"
+ ARC_reichskommissariat_ADJ: "$OVERLORD$ Araucanian"
+ ARC_reichskolonie: "Reichskolonie Araucania"
+ ARC_reichskolonie_DEF: "the The Reichskolonie Araucania"
+ ARC_reichskolonie_ADJ: "$OVERLORD$ Araucanian"
+ ARC_reichsland: "Reichsland Araucania"
+ ARC_reichsland_DEF: "the The Reichsland Araucania"
+ ARC_reichsland_ADJ: "$OVERLORD$ Araucanian"
  
 #大洋州:
  ATC_reichsprotectorate: "Protektorat Neuschwabenland"
