--- a/localisation/english/map/country_names/geacps_dependent_territory_names_JAP_l_english.yml
+++ b/localisation/english/map/country_names/geacps_dependent_territory_names_JAP_l_english.yml
@@ -3432,6 +3432,13 @@
  ZPR_imperial_overseas_territory_DEF: "the The $OVERLORDADJ$ Zaporizhzhia"
  ZPR_imperial_overseas_territory_ADJ: "$OVERLORD$ Zaporizhzhian"
  
+ TRS_imperial_constituent_state: "$OVERLORDADJ$ Triestine State"
+ TRS_imperial_constituent_state_DEF: "the The $OVERLORDADJ$ Triestine State"
+ TRS_imperial_constituent_state_ADJ: "$OVERLORD$ Triestine"
+ TRS_imperial_overseas_territory: "$OVERLORDADJ$ Trieste"
+ TRS_imperial_overseas_territory_DEF: "the The $OVERLORDADJ$ Trieste"
+ TRS_imperial_overseas_territory_ADJ: "$OVERLORD$ Triestine"
+ 
 #アフリカ:
  AFR_imperial_constituent_state: "$OVERLORDADJ$ African State"
  AFR_imperial_constituent_state_DEF: "the The $OVERLORDADJ$ African State"
@@ -3972,6 +3979,20 @@
  WIW_imperial_overseas_territory: "$OVERLORDADJ$ Windward Islands"
  WIW_imperial_overseas_territory_DEF: "the The $OVERLORDADJ$ Windward Islands"
  WIW_imperial_overseas_territory_ADJ: "$OVERLORD$ Windward Islander"
+ 
+ PTG_imperial_constituent_state: "$OVERLORDADJ$ Patagonian State"
+ PTG_imperial_constituent_state_DEF: "the The $OVERLORDADJ$ Patagonian State"
+ PTG_imperial_constituent_state_ADJ: "$OVERLORD$ Patagonian"
+ PTG_imperial_overseas_territory: "$OVERLORDADJ$ Patagonia"
+ PTG_imperial_overseas_territory_DEF: "the The $OVERLORDADJ$ Patagonia"
+ PTG_imperial_overseas_territory_ADJ: "$OVERLORD$ Patagonian"
+ 
+ ARC_imperial_constituent_state: "$OVERLORDADJ$ Araucanian State"
+ ARC_imperial_constituent_state_DEF: "the The $OVERLORDADJ$ Araucanian State"
+ ARC_imperial_constituent_state_ADJ: "$OVERLORD$ Araucanian"
+ ARC_imperial_overseas_territory: "$OVERLORDADJ$ Araucania"
+ ARC_imperial_overseas_territory_DEF: "the The $OVERLORDADJ$ Araucania"
+ ARC_imperial_overseas_territory_ADJ: "$OVERLORD$ Araucanian"
  
 #大洋州:
  ATC_imperial_constituent_state: "$OVERLORDADJ$ Antarctic State"
