--- a/localisation/english/map/country_names/geacps_dependent_territory_names_SOV_l_english.yml
+++ b/localisation/english/map/country_names/geacps_dependent_territory_names_SOV_l_english.yml
@@ -13701,6 +13701,34 @@
  ZPR_progressive_socialism_SOV_constituent_autonomous_republic_DEF: "the The Zaporizhzhian Autonomous $OVERLORDADJ$ Socialist Republic"
  ZPR_progressive_socialism_SOV_constituent_autonomous_republic_ADJ: "Zaporizhzhian $OVERLORD$"
  
+ TRS_SOV_constituent_republic: "Triestine $OVERLORDADJ$ Republic"
+ TRS_SOV_constituent_republic_DEF: "the The Triestine $OVERLORDADJ$ Republic"
+ TRS_SOV_constituent_republic_ADJ: "Triestine $OVERLORD$"
+ TRS_SOV_constituent_federative_republic: "Triestine $OVERLORDADJ$ Federative Republic"
+ TRS_SOV_constituent_federative_republic_DEF: "the The Triestine $OVERLORDADJ$ Federative Republic"
+ TRS_SOV_constituent_federative_republic_ADJ: "Triestine $OVERLORD$"
+ TRS_SOV_constituent_autonomous_republic: "Triestine Autonomous $OVERLORDADJ$ Republic"
+ TRS_SOV_constituent_autonomous_republic_DEF: "the The Triestine Autonomous $OVERLORDADJ$ Republic"
+ TRS_SOV_constituent_autonomous_republic_ADJ: "Triestine $OVERLORD$"
+ TRS_orthodox_socialism_SOV_constituent_republic: "Triestine $OVERLORDADJ$ Socialist Republic"
+ TRS_orthodox_socialism_SOV_constituent_republic_DEF: "the The Triestine $OVERLORDADJ$ Socialist Republic"
+ TRS_orthodox_socialism_SOV_constituent_republic_ADJ: "Triestine $OVERLORD$"
+ TRS_orthodox_socialism_SOV_constituent_federative_republic: "Triestine $OVERLORDADJ$ Socialist Federative Republic"
+ TRS_orthodox_socialism_SOV_constituent_federative_republic_DEF: "the The Triestine $OVERLORDADJ$ Socialist Federative Republic"
+ TRS_orthodox_socialism_SOV_constituent_federative_republic_ADJ: "Triestine $OVERLORD$"
+ TRS_orthodox_socialism_SOV_constituent_autonomous_republic: "Triestine Autonomous $OVERLORDADJ$ Socialist Republic"
+ TRS_orthodox_socialism_SOV_constituent_autonomous_republic_DEF: "the The Triestine Autonomous $OVERLORDADJ$ Socialist Republic"
+ TRS_orthodox_socialism_SOV_constituent_autonomous_republic_ADJ: "Triestine $OVERLORD$"
+ TRS_progressive_socialism_SOV_constituent_republic: "Triestine $OVERLORDADJ$ Socialist Republic"
+ TRS_progressive_socialism_SOV_constituent_republic_DEF: "the The Triestine $OVERLORDADJ$ Socialist Republic"
+ TRS_progressive_socialism_SOV_constituent_republic_ADJ: "Triestine $OVERLORD$"
+ TRS_progressive_socialism_SOV_constituent_federative_republic: "Triestine $OVERLORDADJ$ Socialist Federative Republic"
+ TRS_progressive_socialism_SOV_constituent_federative_republic_DEF: "the The Triestine $OVERLORDADJ$ Socialist Federative Republic"
+ TRS_progressive_socialism_SOV_constituent_federative_republic_ADJ: "Triestine $OVERLORD$"
+ TRS_progressive_socialism_SOV_constituent_autonomous_republic: "Triestine Autonomous $OVERLORDADJ$ Socialist Republic"
+ TRS_progressive_socialism_SOV_constituent_autonomous_republic_DEF: "the The Triestine Autonomous $OVERLORDADJ$ Socialist Republic"
+ TRS_progressive_socialism_SOV_constituent_autonomous_republic_ADJ: "Triestine $OVERLORD$"
+ 
 #アフリカ:
  AFR_SOV_constituent_republic: "African $OVERLORDADJ$ Republic"
  AFR_SOV_constituent_republic_DEF: "the The African $OVERLORDADJ$ Republic"
@@ -15858,6 +15886,62 @@
  WIW_progressive_socialism_SOV_constituent_autonomous_republic: "Windward Islander Autonomous $OVERLORDADJ$ Socialist Republic"
  WIW_progressive_socialism_SOV_constituent_autonomous_republic_DEF: "the The Windward Islander Autonomous $OVERLORDADJ$ Socialist Republic"
  WIW_progressive_socialism_SOV_constituent_autonomous_republic_ADJ: "Windward Islander $OVERLORD$"
+ 
+ PTG_SOV_constituent_republic: "Patagonian $OVERLORDADJ$ Republic"
+ PTG_SOV_constituent_republic_DEF: "the The Patagonian $OVERLORDADJ$ Republic"
+ PTG_SOV_constituent_republic_ADJ: "Patagonian $OVERLORD$"
+ PTG_SOV_constituent_federative_republic: "Patagonian $OVERLORDADJ$ Federative Republic"
+ PTG_SOV_constituent_federative_republic_DEF: "the The Patagonian $OVERLORDADJ$ Federative Republic"
+ PTG_SOV_constituent_federative_republic_ADJ: "Patagonian $OVERLORD$"
+ PTG_SOV_constituent_autonomous_republic: "Patagonian Autonomous $OVERLORDADJ$ Republic"
+ PTG_SOV_constituent_autonomous_republic_DEF: "the The Patagonian Autonomous $OVERLORDADJ$ Republic"
+ PTG_SOV_constituent_autonomous_republic_ADJ: "Patagonian $OVERLORD$"
+ PTG_orthodox_socialism_SOV_constituent_republic: "Patagonian $OVERLORDADJ$ Socialist Republic"
+ PTG_orthodox_socialism_SOV_constituent_republic_DEF: "the The Patagonian $OVERLORDADJ$ Socialist Republic"
+ PTG_orthodox_socialism_SOV_constituent_republic_ADJ: "Patagonian $OVERLORD$"
+ PTG_orthodox_socialism_SOV_constituent_federative_republic: "Patagonian $OVERLORDADJ$ Socialist Federative Republic"
+ PTG_orthodox_socialism_SOV_constituent_federative_republic_DEF: "the The Patagonian $OVERLORDADJ$ Socialist Federative Republic"
+ PTG_orthodox_socialism_SOV_constituent_federative_republic_ADJ: "Patagonian $OVERLORD$"
+ PTG_orthodox_socialism_SOV_constituent_autonomous_republic: "Patagonian Autonomous $OVERLORDADJ$ Socialist Republic"
+ PTG_orthodox_socialism_SOV_constituent_autonomous_republic_DEF: "the The Patagonian Autonomous $OVERLORDADJ$ Socialist Republic"
+ PTG_orthodox_socialism_SOV_constituent_autonomous_republic_ADJ: "Patagonian $OVERLORD$"
+ PTG_progressive_socialism_SOV_constituent_republic: "Patagonian $OVERLORDADJ$ Socialist Republic"
+ PTG_progressive_socialism_SOV_constituent_republic_DEF: "the The Patagonian $OVERLORDADJ$ Socialist Republic"
+ PTG_progressive_socialism_SOV_constituent_republic_ADJ: "Patagonian $OVERLORD$"
+ PTG_progressive_socialism_SOV_constituent_federative_republic: "Patagonian $OVERLORDADJ$ Socialist Federative Republic"
+ PTG_progressive_socialism_SOV_constituent_federative_republic_DEF: "the The Patagonian $OVERLORDADJ$ Socialist Federative Republic"
+ PTG_progressive_socialism_SOV_constituent_federative_republic_ADJ: "Patagonian $OVERLORD$"
+ PTG_progressive_socialism_SOV_constituent_autonomous_republic: "Patagonian Autonomous $OVERLORDADJ$ Socialist Republic"
+ PTG_progressive_socialism_SOV_constituent_autonomous_republic_DEF: "the The Patagonian Autonomous $OVERLORDADJ$ Socialist Republic"
+ PTG_progressive_socialism_SOV_constituent_autonomous_republic_ADJ: "Patagonian $OVERLORD$"
+ 
+ ARC_SOV_constituent_republic: "Araucanian $OVERLORDADJ$ Republic"
+ ARC_SOV_constituent_republic_DEF: "the The Araucanian $OVERLORDADJ$ Republic"
+ ARC_SOV_constituent_republic_ADJ: "Araucanian $OVERLORD$"
+ ARC_SOV_constituent_federative_republic: "Araucanian $OVERLORDADJ$ Federative Republic"
+ ARC_SOV_constituent_federative_republic_DEF: "the The Araucanian $OVERLORDADJ$ Federative Republic"
+ ARC_SOV_constituent_federative_republic_ADJ: "Araucanian $OVERLORD$"
+ ARC_SOV_constituent_autonomous_republic: "Araucanian Autonomous $OVERLORDADJ$ Republic"
+ ARC_SOV_constituent_autonomous_republic_DEF: "the The Araucanian Autonomous $OVERLORDADJ$ Republic"
+ ARC_SOV_constituent_autonomous_republic_ADJ: "Araucanian $OVERLORD$"
+ ARC_orthodox_socialism_SOV_constituent_republic: "Araucanian $OVERLORDADJ$ Socialist Republic"
+ ARC_orthodox_socialism_SOV_constituent_republic_DEF: "the The Araucanian $OVERLORDADJ$ Socialist Republic"
+ ARC_orthodox_socialism_SOV_constituent_republic_ADJ: "Araucanian $OVERLORD$"
+ ARC_orthodox_socialism_SOV_constituent_federative_republic: "Araucanian $OVERLORDADJ$ Socialist Federative Republic"
+ ARC_orthodox_socialism_SOV_constituent_federative_republic_DEF: "the The Araucanian $OVERLORDADJ$ Socialist Federative Republic"
+ ARC_orthodox_socialism_SOV_constituent_federative_republic_ADJ: "Araucanian $OVERLORD$"
+ ARC_orthodox_socialism_SOV_constituent_autonomous_republic: "Araucanian Autonomous $OVERLORDADJ$ Socialist Republic"
+ ARC_orthodox_socialism_SOV_constituent_autonomous_republic_DEF: "the The Araucanian Autonomous $OVERLORDADJ$ Socialist Republic"
+ ARC_orthodox_socialism_SOV_constituent_autonomous_republic_ADJ: "Araucanian $OVERLORD$"
+ ARC_progressive_socialism_SOV_constituent_republic: "Araucanian $OVERLORDADJ$ Socialist Republic"
+ ARC_progressive_socialism_SOV_constituent_republic_DEF: "the The Araucanian $OVERLORDADJ$ Socialist Republic"
+ ARC_progressive_socialism_SOV_constituent_republic_ADJ: "Araucanian $OVERLORD$"
+ ARC_progressive_socialism_SOV_constituent_federative_republic: "Araucanian $OVERLORDADJ$ Socialist Federative Republic"
+ ARC_progressive_socialism_SOV_constituent_federative_republic_DEF: "the The Araucanian $OVERLORDADJ$ Socialist Federative Republic"
+ ARC_progressive_socialism_SOV_constituent_federative_republic_ADJ: "Araucanian $OVERLORD$"
+ ARC_progressive_socialism_SOV_constituent_autonomous_republic: "Araucanian Autonomous $OVERLORDADJ$ Socialist Republic"
+ ARC_progressive_socialism_SOV_constituent_autonomous_republic_DEF: "the The Araucanian Autonomous $OVERLORDADJ$ Socialist Republic"
+ ARC_progressive_socialism_SOV_constituent_autonomous_republic_ADJ: "Araucanian $OVERLORD$"
  
 #大洋州:
  ATC_SOV_constituent_republic: "Antarctic $OVERLORDADJ$ Republic"
