--- a/localisation/english/map/country_names/geacps_dependent_territory_names_USA_l_english.yml
+++ b/localisation/english/map/country_names/geacps_dependent_territory_names_USA_l_english.yml
@@ -2943,6 +2943,12 @@
  ZPR_USA_territory_DEF: "the The Territory of Zaporizhzhia"
  ZPR_USA_territory_ADJ: "$OVERLORD$ Zaporizhzhian"
  
+ TRS_USA_commonwealth: "Commonwealth of Trieste"
+ TRS_USA_commonwealth_DEF: "the The Commonwealth of Trieste"
+ TRS_USA_territory: "Territory of Trieste"
+ TRS_USA_territory_DEF: "the The Territory of Trieste"
+ TRS_USA_territory_ADJ: "$OVERLORD$ Triestine"
+ 
 #アフリカ:
  AFR_USA_commonwealth: "Commonwealth of Africa"
  AFR_USA_commonwealth_DEF: "the The Commonwealth of Africa"
@@ -3406,6 +3412,18 @@
  WIW_USA_territory: "Territory of Windward Islands"
  WIW_USA_territory_DEF: "the The Territory of Windward Islands"
  WIW_USA_territory_ADJ: "$OVERLORD$ Windward Islander"
+ 
+ PTG_USA_commonwealth: "Commonwealth of Patagonia"
+ PTG_USA_commonwealth_DEF: "the The Commonwealth of Patagonia"
+ PTG_USA_territory: "Territory of Patagonia"
+ PTG_USA_territory_DEF: "the The Territory of Patagonia"
+ PTG_USA_territory_ADJ: "$OVERLORD$ Patagonian"
+ 
+ ARC_USA_commonwealth: "Commonwealth of Araucania"
+ ARC_USA_commonwealth_DEF: "the The Commonwealth of Araucania"
+ ARC_USA_territory: "Territory of Araucania"
+ ARC_USA_territory_DEF: "the The Territory of Araucania"
+ ARC_USA_territory_ADJ: "$OVERLORD$ Araucanian"
  
 #大洋州:
  ATC_USA_commonwealth: "Commonwealth of Antarctica"
