--- a/localisation/japanese/map/country_names/geacps_country_names__l_japanese.yml
+++ b/localisation/japanese/map/country_names/geacps_country_names__l_japanese.yml
@@ -1965,6 +1965,10 @@
  ZPR_DEF: "ザポロージャ"
  ZPR_ADJ: "ザポロージャ"
  
+ TRS: "トリエステ"
+ TRS_DEF: "トリエステ"
+ TRS_ADJ: "トリエステ"
+ 
 #アフリカ:
  AFR: "アフリカ"
  AFR_DEF: "アフリカ"
@@ -2274,6 +2278,14 @@
  WIW: "ウィンドワード諸島"
  WIW_DEF: "ウィンドワード諸島"
  WIW_ADJ: "ウィンドワード諸島"
+ 
+ PTG: "パタゴニア"
+ PTG_DEF: "パタゴニア"
+ PTG_ADJ: "パタゴニア"
+ 
+ ARC: "アラウカニア"
+ ARC_DEF: "アラウカニア"
+ ARC_ADJ: "アラウカニア"
  
 #大洋州:
  ATC: "南極"
