--- a/localisation/japanese/map/country_names/geacps_country_names_cosmetic_l_japanese.yml
+++ b/localisation/japanese/map/country_names/geacps_country_names_cosmetic_l_japanese.yml
@@ -690,6 +690,12 @@
  ITA_republic: "イタリア共和国"
  ITA_republic_DEF: "イタリア共和国"
  ITA_republic_ADJ: "イタリア"
+ ITA_republic_0_0: "イタリア共和国"
+ ITA_republic_0_0_DEF: "イタリア共和国"
+ ITA_republic_0_0_ADJ: "イタリア"
+ ITA_republic_0_1: "イタリア共和国"
+ ITA_republic_0_1_DEF: "イタリア共和国"
+ ITA_republic_0_1_ADJ: "イタリア"
  ITA_social_republic: "イタリア社会共和国"
  ITA_social_republic_DEF: "イタリア社会共和国"
  ITA_social_republic_ADJ: "イタリア"
@@ -1309,6 +1315,13 @@
  AMERICA_united_states_100: "アメリカ合衆国"
  AMERICA_united_states_100_DEF: "アメリカ合衆国"
  AMERICA_united_states_100_ADJ: "アメリカ"
+ 
+ ARCandPTG: "アラウカニア及びパタゴニア"
+ ARCandPTG_DEF: "アラウカニア及びパタゴニア"
+ ARCandPTG_ADJ: "アラウカニア・パタゴニア"
+ ARCandPTG_kingdom: "アラウカニア及びパタゴニア王国"
+ ARCandPTG_kingdom_DEF: "アラウカニア及びパタゴニア王国"
+ ARCandPTG_kingdom_ADJ: "アラウカニア・パタゴニア"
  
  NEWGRANADA: "ヌエバ・グラナダ"
  NEWGRANADA_DEF: "ヌエバ・グラナダ"
