--- a/localisation/japanese/map/country_names/geacps_country_names_form_l_japanese.yml
+++ b/localisation/japanese/map/country_names/geacps_country_names_form_l_japanese.yml
@@ -695,6 +695,10 @@
  ITA_kingdom_DEF: "イタリア王国"
  ITA_republic: "イタリア共和国"
  ITA_republic_DEF: "イタリア共和国"
+ ITA_republic_0_0: "イタリア共和国"
+ ITA_republic_0_0_DEF: "イタリア共和国"
+ ITA_republic_0_1: "イタリア共和国"
+ ITA_republic_0_1_DEF: "イタリア共和国"
  ITA_social_republic: "イタリア社会共和国"
  ITA_social_republic_DEF: "イタリア社会共和国"
  ITA_united_provinces: "イタリア諸州連合"
@@ -2204,6 +2208,8 @@
  ZHI_suweiai_government: "直隷蘇維埃政府"
  ZHI_suweiai_government_DEF: "直隷蘇維埃政府"
  
+ SUL_republic: "スールー共和国"
+ SUL_republic_DEF: "スールー共和国"
  SUL_sultanate: "スールー・スルタン国"
  SUL_sultanate_DEF: "スールー・スルタン国"
  
@@ -2644,6 +2650,8 @@
  
  SIB_cossack_republic: "シベリア・コサック共和国"
  SIB_cossack_republic_DEF: "シベリア・コサック共和国"
+ SIB_democratic_republic: "シベリア民主共和国"
+ SIB_democratic_republic_DEF: "シベリア民主共和国"
  SIB_republic: "シベリア共和国"
  SIB_republic_DEF: "シベリア共和国"
  
@@ -2749,6 +2757,11 @@
  ZPR_cossack_republic_DEF: "ザポロージャ・コサック共和国"
  ZPR_republic: "ザポロージャ共和国"
  ZPR_republic_DEF: "ザポロージャ共和国"
+ 
+ TRS_free_territory: "トリエステ自由地域"
+ TRS_free_territory_DEF: "トリエステ自由地域"
+ TRS_republic: "トリエステ共和国"
+ TRS_republic_DEF: "トリエステ共和国"
  
 #アフリカ:
  AFR_republic: "アフリカ共和国"
@@ -3062,6 +3075,12 @@
  WIW_federation_DEF: "ウィンドワード諸島連邦"
  WIW_republic: "ウィンドワード諸島共和国"
  WIW_republic_DEF: "ウィンドワード諸島共和国"
+ 
+ PTG_republic: "パタゴニア共和国"
+ PTG_republic_DEF: "パタゴニア共和国"
+ 
+ ARC_republic: "アラウカニア共和国"
+ ARC_republic_DEF: "アラウカニア共和国"
  
 #大洋州:
  ATC_republic: "南極共和国"
