--- a/localisation/japanese/map/country_names/geacps_dependent_territory_names_1_l_japanese.yml
+++ b/localisation/japanese/map/country_names/geacps_dependent_territory_names_1_l_japanese.yml
@@ -21078,6 +21078,49 @@
  ZPR_leased_territory_DEF: "$OVERLORDADJ$領ザポロージャ"
  ZPR_leased_territory_ADJ: "$OVERLORD$領ザポロージャ"
  
+ TRS_colony: "$OVERLORDADJ$領トリエステ植民地"
+ TRS_colony_DEF: "$OVERLORDADJ$領トリエステ植民地"
+ TRS_colony_ADJ: "$OVERLORD$領トリエステ"
+ TRS_colonies_federation: "$OVERLORDADJ$領トリエステ連邦植民地"
+ TRS_colonies_federation_DEF: "$OVERLORDADJ$領トリエステ連邦植民地"
+ TRS_colonies_federation_ADJ: "$OVERLORD$領トリエステ"
+ TRS_colony_and_protected_territory: "$OVERLORDADJ$領トリエステ植民地及び保護領"
+ TRS_colony_and_protected_territory_DEF: "$OVERLORDADJ$領トリエステ植民地及び保護領"
+ TRS_colony_and_protected_territory_ADJ: "$OVERLORD$領トリエステ"
+ TRS_condominium: "共同統治領トリエステ"
+ TRS_condominium_DEF: "共同統治領トリエステ"
+ TRS_condominium_ADJ: "$OVERLORD$領トリエステ"
+ TRS_overseas_territory: "$OVERLORDADJ$領トリエステ"
+ TRS_overseas_territory_DEF: "$OVERLORDADJ$領トリエステ"
+ TRS_overseas_territory_ADJ: "$OVERLORD$領トリエステ"
+ TRS_viceroyalty: "トリエステ副王領"
+ TRS_viceroyalty_DEF: "トリエステ副王領"
+ TRS_viceroyalty_ADJ: "$OVERLORD$領トリエステ"
+ TRS_captaincy_general: "トリエステ総督領"
+ TRS_captaincy_general_DEF: "トリエステ総督領"
+ TRS_captaincy_general_ADJ: "$OVERLORD$領トリエステ"
+ TRS_protected_territory: "$OVERLORDADJ$保護領トリエステ"
+ TRS_protected_territory_DEF: "$OVERLORDADJ$保護領トリエステ"
+ TRS_protected_territory_ADJ: "$OVERLORD$領トリエステ"
+ TRS_constituent_autonomous_province: "$OVERLORDADJ$領トリエステ州"
+ TRS_constituent_autonomous_province_DEF: "$OVERLORDADJ$領トリエステ州"
+ TRS_constituent_autonomous_province_ADJ: "$OVERLORD$領トリエステ"
+ TRS_trust_territory: "$OVERLORDADJ$信託統治領トリエステ"
+ TRS_trust_territory_DEF: "$OVERLORDADJ$信託統治領トリエステ"
+ TRS_trust_territory_ADJ: "$OVERLORD$領トリエステ"
+ TRS_mandated_territory_A: "$OVERLORDADJ$委任統治領トリエステ"
+ TRS_mandated_territory_A_DEF: "$OVERLORDADJ$委任統治領トリエステ"
+ TRS_mandated_territory_A_ADJ: "$OVERLORD$領トリエステ"
+ TRS_mandated_territory_B: "$OVERLORDADJ$委任統治領トリエステ"
+ TRS_mandated_territory_B_DEF: "$OVERLORDADJ$委任統治領トリエステ"
+ TRS_mandated_territory_B_ADJ: "$OVERLORD$領トリエステ"
+ TRS_mandated_territory_C: "$OVERLORDADJ$委任統治領トリエステ"
+ TRS_mandated_territory_C_DEF: "$OVERLORDADJ$委任統治領トリエステ"
+ TRS_mandated_territory_C_ADJ: "$OVERLORD$領トリエステ"
+ TRS_leased_territory: "$OVERLORDADJ$領トリエステ"
+ TRS_leased_territory_DEF: "$OVERLORDADJ$領トリエステ"
+ TRS_leased_territory_ADJ: "$OVERLORD$領トリエステ"
+ 
 #アフリカ:
  AFR_colony: "$OVERLORDADJ$領アフリカ植民地"
  AFR_colony_DEF: "$OVERLORDADJ$領アフリカ植民地"
@@ -24391,6 +24434,92 @@
  WIW_leased_territory_DEF: "$OVERLORDADJ$領ウィンドワード諸島"
  WIW_leased_territory_ADJ: "$OVERLORD$領ウィンドワード諸島"
  
+ PTG_colony: "$OVERLORDADJ$領パタゴニア植民地"
+ PTG_colony_DEF: "$OVERLORDADJ$領パタゴニア植民地"
+ PTG_colony_ADJ: "$OVERLORD$領パタゴニア"
+ PTG_colonies_federation: "$OVERLORDADJ$領パタゴニア連邦植民地"
+ PTG_colonies_federation_DEF: "$OVERLORDADJ$領パタゴニア連邦植民地"
+ PTG_colonies_federation_ADJ: "$OVERLORD$領パタゴニア"
+ PTG_colony_and_protected_territory: "$OVERLORDADJ$領パタゴニア植民地及び保護領"
+ PTG_colony_and_protected_territory_DEF: "$OVERLORDADJ$領パタゴニア植民地及び保護領"
+ PTG_colony_and_protected_territory_ADJ: "$OVERLORD$領パタゴニア"
+ PTG_condominium: "共同統治領パタゴニア"
+ PTG_condominium_DEF: "共同統治領パタゴニア"
+ PTG_condominium_ADJ: "$OVERLORD$領パタゴニア"
+ PTG_overseas_territory: "$OVERLORDADJ$領パタゴニア"
+ PTG_overseas_territory_DEF: "$OVERLORDADJ$領パタゴニア"
+ PTG_overseas_territory_ADJ: "$OVERLORD$領パタゴニア"
+ PTG_viceroyalty: "パタゴニア副王領"
+ PTG_viceroyalty_DEF: "パタゴニア副王領"
+ PTG_viceroyalty_ADJ: "$OVERLORD$領パタゴニア"
+ PTG_captaincy_general: "パタゴニア総督領"
+ PTG_captaincy_general_DEF: "パタゴニア総督領"
+ PTG_captaincy_general_ADJ: "$OVERLORD$領パタゴニア"
+ PTG_protected_territory: "$OVERLORDADJ$保護領パタゴニア"
+ PTG_protected_territory_DEF: "$OVERLORDADJ$保護領パタゴニア"
+ PTG_protected_territory_ADJ: "$OVERLORD$領パタゴニア"
+ PTG_constituent_autonomous_province: "$OVERLORDADJ$領パタゴニア州"
+ PTG_constituent_autonomous_province_DEF: "$OVERLORDADJ$領パタゴニア州"
+ PTG_constituent_autonomous_province_ADJ: "$OVERLORD$領パタゴニア"
+ PTG_trust_territory: "$OVERLORDADJ$信託統治領パタゴニア"
+ PTG_trust_territory_DEF: "$OVERLORDADJ$信託統治領パタゴニア"
+ PTG_trust_territory_ADJ: "$OVERLORD$領パタゴニア"
+ PTG_mandated_territory_A: "$OVERLORDADJ$委任統治領パタゴニア"
+ PTG_mandated_territory_A_DEF: "$OVERLORDADJ$委任統治領パタゴニア"
+ PTG_mandated_territory_A_ADJ: "$OVERLORD$領パタゴニア"
+ PTG_mandated_territory_B: "$OVERLORDADJ$委任統治領パタゴニア"
+ PTG_mandated_territory_B_DEF: "$OVERLORDADJ$委任統治領パタゴニア"
+ PTG_mandated_territory_B_ADJ: "$OVERLORD$領パタゴニア"
+ PTG_mandated_territory_C: "$OVERLORDADJ$委任統治領パタゴニア"
+ PTG_mandated_territory_C_DEF: "$OVERLORDADJ$委任統治領パタゴニア"
+ PTG_mandated_territory_C_ADJ: "$OVERLORD$領パタゴニア"
+ PTG_leased_territory: "$OVERLORDADJ$領パタゴニア"
+ PTG_leased_territory_DEF: "$OVERLORDADJ$領パタゴニア"
+ PTG_leased_territory_ADJ: "$OVERLORD$領パタゴニア"
+ 
+ ARC_colony: "$OVERLORDADJ$領アラウカニア植民地"
+ ARC_colony_DEF: "$OVERLORDADJ$領アラウカニア植民地"
+ ARC_colony_ADJ: "$OVERLORD$領アラウカニア"
+ ARC_colonies_federation: "$OVERLORDADJ$領アラウカニア連邦植民地"
+ ARC_colonies_federation_DEF: "$OVERLORDADJ$領アラウカニア連邦植民地"
+ ARC_colonies_federation_ADJ: "$OVERLORD$領アラウカニア"
+ ARC_colony_and_protected_territory: "$OVERLORDADJ$領アラウカニア植民地及び保護領"
+ ARC_colony_and_protected_territory_DEF: "$OVERLORDADJ$領アラウカニア植民地及び保護領"
+ ARC_colony_and_protected_territory_ADJ: "$OVERLORD$領アラウカニア"
+ ARC_condominium: "共同統治領アラウカニア"
+ ARC_condominium_DEF: "共同統治領アラウカニア"
+ ARC_condominium_ADJ: "$OVERLORD$領アラウカニア"
+ ARC_overseas_territory: "$OVERLORDADJ$領アラウカニア"
+ ARC_overseas_territory_DEF: "$OVERLORDADJ$領アラウカニア"
+ ARC_overseas_territory_ADJ: "$OVERLORD$領アラウカニア"
+ ARC_viceroyalty: "アラウカニア副王領"
+ ARC_viceroyalty_DEF: "アラウカニア副王領"
+ ARC_viceroyalty_ADJ: "$OVERLORD$領アラウカニア"
+ ARC_captaincy_general: "アラウカニア総督領"
+ ARC_captaincy_general_DEF: "アラウカニア総督領"
+ ARC_captaincy_general_ADJ: "$OVERLORD$領アラウカニア"
+ ARC_protected_territory: "$OVERLORDADJ$保護領アラウカニア"
+ ARC_protected_territory_DEF: "$OVERLORDADJ$保護領アラウカニア"
+ ARC_protected_territory_ADJ: "$OVERLORD$領アラウカニア"
+ ARC_constituent_autonomous_province: "$OVERLORDADJ$領アラウカニア州"
+ ARC_constituent_autonomous_province_DEF: "$OVERLORDADJ$領アラウカニア州"
+ ARC_constituent_autonomous_province_ADJ: "$OVERLORD$領アラウカニア"
+ ARC_trust_territory: "$OVERLORDADJ$信託統治領アラウカニア"
+ ARC_trust_territory_DEF: "$OVERLORDADJ$信託統治領アラウカニア"
+ ARC_trust_territory_ADJ: "$OVERLORD$領アラウカニア"
+ ARC_mandated_territory_A: "$OVERLORDADJ$委任統治領アラウカニア"
+ ARC_mandated_territory_A_DEF: "$OVERLORDADJ$委任統治領アラウカニア"
+ ARC_mandated_territory_A_ADJ: "$OVERLORD$領アラウカニア"
+ ARC_mandated_territory_B: "$OVERLORDADJ$委任統治領アラウカニア"
+ ARC_mandated_territory_B_DEF: "$OVERLORDADJ$委任統治領アラウカニア"
+ ARC_mandated_territory_B_ADJ: "$OVERLORD$領アラウカニア"
+ ARC_mandated_territory_C: "$OVERLORDADJ$委任統治領アラウカニア"
+ ARC_mandated_territory_C_DEF: "$OVERLORDADJ$委任統治領アラウカニア"
+ ARC_mandated_territory_C_ADJ: "$OVERLORD$領アラウカニア"
+ ARC_leased_territory: "$OVERLORDADJ$領アラウカニア"
+ ARC_leased_territory_DEF: "$OVERLORDADJ$領アラウカニア"
+ ARC_leased_territory_ADJ: "$OVERLORD$領アラウカニア"
+ 
 #大洋州:
  ATC_colony: "$OVERLORDADJ$領南極植民地"
  ATC_colony_DEF: "$OVERLORDADJ$領南極植民地"
@@ -27632,6 +27761,19 @@
  JER_bailiwick_mandated_territory_A: "$OVERLORDADJ$委任統治領ジャージー代官管轄区"
  JER_bailiwick_mandated_territory_A_DEF: "$OVERLORDADJ$委任統治領ジャージー代官管轄区"
  JER_bailiwick_mandated_territory_A_ADJ: "$OVERLORD$領ジャージー"
+ 
+ SIB_democratic_republic_colony: "$OVERLORDADJ$領シベリア民主共和国"
+ SIB_democratic_republic_colony_DEF: "$OVERLORDADJ$領シベリア民主共和国"
+ SIB_democratic_republic_colony_ADJ: "$OVERLORD$領シベリア"
+ SIB_democratic_republic_protected_territory: "$OVERLORDADJ$保護領シベリア民主共和国"
+ SIB_democratic_republic_protected_territory_DEF: "$OVERLORDADJ$保護領シベリア民主共和国"
+ SIB_democratic_republic_protected_territory_ADJ: "$OVERLORD$領シベリア"
+ SIB_democratic_republic_trust_territory: "$OVERLORDADJ$信託統治領シベリア民主共和国"
+ SIB_democratic_republic_trust_territory_DEF: "$OVERLORDADJ$信託統治領シベリア民主共和国"
+ SIB_democratic_republic_trust_territory_ADJ: "$OVERLORD$領シベリア"
+ SIB_democratic_republic_mandated_territory_A: "$OVERLORDADJ$委任統治領シベリア民主共和国"
+ SIB_democratic_republic_mandated_territory_A_DEF: "$OVERLORDADJ$委任統治領シベリア民主共和国"
+ SIB_democratic_republic_mandated_territory_A_ADJ: "$OVERLORD$領シベリア"
  
 #アフリカ:
 #新大陸:
