--- a/localisation/japanese/map/country_names/geacps_dependent_territory_names_CHI_l_japanese.yml
+++ b/localisation/japanese/map/country_names/geacps_dependent_territory_names_CHI_l_japanese.yml
@@ -3432,6 +3432,13 @@
  ZPR_CHI_autonomous_province_DEF: "ザポロージャ省"
  ZPR_CHI_autonomous_province_ADJ: "$OVERLORD$領ザポロージャ"
  
+ TRS_CHI_autonomous_military_clique: "トリエステ軍閥"
+ TRS_CHI_autonomous_military_clique_DEF: "トリエステ軍閥"
+ TRS_CHI_autonomous_military_clique_ADJ: "$OVERLORD$領トリエステ"
+ TRS_CHI_autonomous_province: "トリエステ省"
+ TRS_CHI_autonomous_province_DEF: "トリエステ省"
+ TRS_CHI_autonomous_province_ADJ: "$OVERLORD$領トリエステ"
+ 
 #アフリカ:
  AFR_CHI_autonomous_military_clique: "アフリカ軍閥"
  AFR_CHI_autonomous_military_clique_DEF: "アフリカ軍閥"
@@ -3973,6 +3980,20 @@
  WIW_CHI_autonomous_province_DEF: "ウィンドワード諸島省"
  WIW_CHI_autonomous_province_ADJ: "$OVERLORD$領ウィンドワード諸島"
  
+ PTG_CHI_autonomous_military_clique: "パタゴニア軍閥"
+ PTG_CHI_autonomous_military_clique_DEF: "パタゴニア軍閥"
+ PTG_CHI_autonomous_military_clique_ADJ: "$OVERLORD$領パタゴニア"
+ PTG_CHI_autonomous_province: "パタゴニア省"
+ PTG_CHI_autonomous_province_DEF: "パタゴニア省"
+ PTG_CHI_autonomous_province_ADJ: "$OVERLORD$領パタゴニア"
+ 
+ ARC_CHI_autonomous_military_clique: "アラウカニア軍閥"
+ ARC_CHI_autonomous_military_clique_DEF: "アラウカニア軍閥"
+ ARC_CHI_autonomous_military_clique_ADJ: "$OVERLORD$領アラウカニア"
+ ARC_CHI_autonomous_province: "アラウカニア省"
+ ARC_CHI_autonomous_province_DEF: "アラウカニア省"
+ ARC_CHI_autonomous_province_ADJ: "$OVERLORD$領アラウカニア"
+ 
 #大洋州:
  ATC_CHI_autonomous_military_clique: "南極軍閥"
  ATC_CHI_autonomous_military_clique_DEF: "南極軍閥"
@@ -4501,6 +4522,7 @@
 ##追加国家:
 #アジア:
 #ヨーロッパ:
+ 
  
  
 #アフリカ:
