--- a/localisation/japanese/map/country_names/geacps_dependent_territory_names_GBR_l_japanese.yml
+++ b/localisation/japanese/map/country_names/geacps_dependent_territory_names_GBR_l_japanese.yml
@@ -1696,6 +1696,9 @@
  ZPR_dominion: "ザポロージャ自治領"
  ZPR_dominion_DEF: "ザポロージャ自治領"
  
+ TRS_dominion: "トリエステ自治領"
+ TRS_dominion_DEF: "トリエステ自治領"
+ 
 #アフリカ:
  AFR_dominion: "アフリカ自治領"
  AFR_dominion_DEF: "アフリカ自治領"
@@ -1928,6 +1931,12 @@
  
  WIW_dominion: "ウィンドワード諸島自治領"
  WIW_dominion_DEF: "ウィンドワード諸島自治領"
+ 
+ PTG_dominion: "パタゴニア自治領"
+ PTG_dominion_DEF: "パタゴニア自治領"
+ 
+ ARC_dominion: "アラウカニア自治領"
+ ARC_dominion_DEF: "アラウカニア自治領"
  
 #大洋州:
  ATC_dominion: "南極自治領"
@@ -2435,6 +2444,9 @@
  
  JER_bailiwick_dominion: "ジャージー代官管轄区"
  JER_bailiwick_dominion_DEF: "ジャージー代官管轄区"
+ 
+ SIB_democratic_republic_dominion: "シベリア民主共和国"
+ SIB_democratic_republic_dominion_DEF: "シベリア民主共和国"
  
 #アフリカ:
 #新大陸:
