--- a/localisation/japanese/map/country_names/geacps_dependent_territory_names_GER_l_japanese.yml
+++ b/localisation/japanese/map/country_names/geacps_dependent_territory_names_GER_l_japanese.yml
@@ -7833,6 +7833,22 @@
  ZPR_reichsland_DEF: "ザポロージャ国家直轄地"
  ZPR_reichsland_ADJ: "$OVERLORD$領ザポロージャ"
  
+ TRS_reichsprotectorate: "トリエステ保護領"
+ TRS_reichsprotectorate_DEF: "トリエステ保護領"
+ TRS_reichsprotectorate_ADJ: "$OVERLORD$領トリエステ"
+ TRS_reichsgeneralgovernorate: "トリエステ総督府領"
+ TRS_reichsgeneralgovernorate_DEF: "トリエステ総督府領"
+ TRS_reichsgeneralgovernorate_ADJ: "$OVERLORD$領トリエステ"
+ TRS_reichskommissariat: "トリエステ国家弁務官区"
+ TRS_reichskommissariat_DEF: "トリエステ国家弁務官区"
+ TRS_reichskommissariat_ADJ: "$OVERLORD$領トリエステ"
+ TRS_reichskolonie: "トリエステ国家植民地"
+ TRS_reichskolonie_DEF: "トリエステ国家植民地"
+ TRS_reichskolonie_ADJ: "$OVERLORD$領トリエステ"
+ TRS_reichsland: "トリエステ国家直轄地"
+ TRS_reichsland_DEF: "トリエステ国家直轄地"
+ TRS_reichsland_ADJ: "$OVERLORD$領トリエステ"
+ 
 #アフリカ:
  AFR_reichsprotectorate: "アフリカ保護領"
  AFR_reichsprotectorate_DEF: "アフリカ保護領"
@@ -9067,6 +9083,38 @@
  WIW_reichsland_DEF: "ウィンドワード諸島国家直轄地"
  WIW_reichsland_ADJ: "$OVERLORD$領ウィンドワード諸島"
  
+ PTG_reichsprotectorate: "パタゴニア保護領"
+ PTG_reichsprotectorate_DEF: "パタゴニア保護領"
+ PTG_reichsprotectorate_ADJ: "$OVERLORD$領パタゴニア"
+ PTG_reichsgeneralgovernorate: "パタゴニア総督府領"
+ PTG_reichsgeneralgovernorate_DEF: "パタゴニア総督府領"
+ PTG_reichsgeneralgovernorate_ADJ: "$OVERLORD$領パタゴニア"
+ PTG_reichskommissariat: "パタゴニア国家弁務官区"
+ PTG_reichskommissariat_DEF: "パタゴニア国家弁務官区"
+ PTG_reichskommissariat_ADJ: "$OVERLORD$領パタゴニア"
+ PTG_reichskolonie: "パタゴニア国家植民地"
+ PTG_reichskolonie_DEF: "パタゴニア国家植民地"
+ PTG_reichskolonie_ADJ: "$OVERLORD$領パタゴニア"
+ PTG_reichsland: "パタゴニア国家直轄地"
+ PTG_reichsland_DEF: "パタゴニア国家直轄地"
+ PTG_reichsland_ADJ: "$OVERLORD$領パタゴニア"
+ 
+ ARC_reichsprotectorate: "アラウカニア保護領"
+ ARC_reichsprotectorate_DEF: "アラウカニア保護領"
+ ARC_reichsprotectorate_ADJ: "$OVERLORD$領アラウカニア"
+ ARC_reichsgeneralgovernorate: "アラウカニア総督府領"
+ ARC_reichsgeneralgovernorate_DEF: "アラウカニア総督府領"
+ ARC_reichsgeneralgovernorate_ADJ: "$OVERLORD$領アラウカニア"
+ ARC_reichskommissariat: "アラウカニア国家弁務官区"
+ ARC_reichskommissariat_DEF: "アラウカニア国家弁務官区"
+ ARC_reichskommissariat_ADJ: "$OVERLORD$領アラウカニア"
+ ARC_reichskolonie: "アラウカニア国家植民地"
+ ARC_reichskolonie_DEF: "アラウカニア国家植民地"
+ ARC_reichskolonie_ADJ: "$OVERLORD$領アラウカニア"
+ ARC_reichsland: "アラウカニア国家直轄地"
+ ARC_reichsland_DEF: "アラウカニア国家直轄地"
+ ARC_reichsland_ADJ: "$OVERLORD$領アラウカニア"
+ 
 #大洋州:
  ATC_reichsprotectorate: "ノイシュヴァーベンラント保護領"
  ATC_reichsprotectorate_DEF: "ノイシュヴァーベンラント保護領"
@@ -10252,6 +10300,7 @@
 ##追加国家:
 #アジア:
 #ヨーロッパ:
+ 
  
  
 #アフリカ:
