--- a/localisation/japanese/map/country_names/geacps_dependent_territory_names_JAP_l_japanese.yml
+++ b/localisation/japanese/map/country_names/geacps_dependent_territory_names_JAP_l_japanese.yml
@@ -3432,6 +3432,13 @@
  ZPR_imperial_overseas_territory_DEF: "$OVERLORDADJ$領ザポロージャ"
  ZPR_imperial_overseas_territory_ADJ: "$OVERLORD$領ザポロージャ"
  
+ TRS_imperial_constituent_state: "$OVERLORDADJ$領トリエステ国"
+ TRS_imperial_constituent_state_DEF: "$OVERLORDADJ$領トリエステ国"
+ TRS_imperial_constituent_state_ADJ: "$OVERLORD$領トリエステ"
+ TRS_imperial_overseas_territory: "$OVERLORDADJ$領トリエステ"
+ TRS_imperial_overseas_territory_DEF: "$OVERLORDADJ$領トリエステ"
+ TRS_imperial_overseas_territory_ADJ: "$OVERLORD$領トリエステ"
+ 
 #アフリカ:
  AFR_imperial_constituent_state: "$OVERLORDADJ$領アフリカ国"
  AFR_imperial_constituent_state_DEF: "$OVERLORDADJ$領アフリカ国"
@@ -3972,6 +3979,20 @@
  WIW_imperial_overseas_territory: "$OVERLORDADJ$領ウィンドワード諸島"
  WIW_imperial_overseas_territory_DEF: "$OVERLORDADJ$領ウィンドワード諸島"
  WIW_imperial_overseas_territory_ADJ: "$OVERLORD$領ウィンドワード諸島"
+ 
+ PTG_imperial_constituent_state: "$OVERLORDADJ$領パタゴニア国"
+ PTG_imperial_constituent_state_DEF: "$OVERLORDADJ$領パタゴニア国"
+ PTG_imperial_constituent_state_ADJ: "$OVERLORD$領パタゴニア"
+ PTG_imperial_overseas_territory: "$OVERLORDADJ$領パタゴニア"
+ PTG_imperial_overseas_territory_DEF: "$OVERLORDADJ$領パタゴニア"
+ PTG_imperial_overseas_territory_ADJ: "$OVERLORD$領パタゴニア"
+ 
+ ARC_imperial_constituent_state: "$OVERLORDADJ$領アラウカニア国"
+ ARC_imperial_constituent_state_DEF: "$OVERLORDADJ$領アラウカニア国"
+ ARC_imperial_constituent_state_ADJ: "$OVERLORD$領アラウカニア"
+ ARC_imperial_overseas_territory: "$OVERLORDADJ$領アラウカニア"
+ ARC_imperial_overseas_territory_DEF: "$OVERLORDADJ$領アラウカニア"
+ ARC_imperial_overseas_territory_ADJ: "$OVERLORD$領アラウカニア"
  
 #大洋州:
  ATC_imperial_constituent_state: "$OVERLORDADJ$領南極国"
@@ -4541,6 +4562,10 @@
  JER_bailiwick_imperial_constituent_state: "$OVERLORDADJ$領ジャージー代官管轄区"
  JER_bailiwick_imperial_constituent_state_DEF: "$OVERLORDADJ$領ジャージー代官管轄区"
  JER_bailiwick_imperial_constituent_state_ADJ: "$OVERLORD$領ジャージー"
+ 
+ SIB_democratic_republic_imperial_constituent_state: "$OVERLORDADJ$領西比利亜民主共和国"
+ SIB_democratic_republic_imperial_constituent_state_DEF: "$OVERLORDADJ$領西比利亜民主共和国"
+ SIB_democratic_republic_imperial_constituent_state_ADJ: "$OVERLORD$領シベリア"
  
 #アフリカ:
 #新大陸:
