--- a/localisation/japanese/map/country_names/geacps_dependent_territory_names_SOV_l_japanese.yml
+++ b/localisation/japanese/map/country_names/geacps_dependent_territory_names_SOV_l_japanese.yml
@@ -13701,6 +13701,34 @@
  ZPR_progressive_socialism_SOV_constituent_autonomous_republic_DEF: "ザポロージャ自治$OVERLORDADJ$社会主義共和国"
  ZPR_progressive_socialism_SOV_constituent_autonomous_republic_ADJ: "ザポロージャ・$OVERLORD$"
  
+ TRS_SOV_constituent_republic: "トリエステ・$OVERLORDADJ$共和国"
+ TRS_SOV_constituent_republic_DEF: "トリエステ・$OVERLORDADJ$共和国"
+ TRS_SOV_constituent_republic_ADJ: "トリエステ・$OVERLORD$"
+ TRS_SOV_constituent_federative_republic: "トリエステ・$OVERLORDADJ$連邦共和国"
+ TRS_SOV_constituent_federative_republic_DEF: "トリエステ・$OVERLORDADJ$連邦共和国"
+ TRS_SOV_constituent_federative_republic_ADJ: "トリエステ・$OVERLORD$"
+ TRS_SOV_constituent_autonomous_republic: "トリエステ自治$OVERLORDADJ$共和国"
+ TRS_SOV_constituent_autonomous_republic_DEF: "トリエステ自治$OVERLORDADJ$共和国"
+ TRS_SOV_constituent_autonomous_republic_ADJ: "トリエステ・$OVERLORD$"
+ TRS_orthodox_socialism_SOV_constituent_republic: "トリエステ・$OVERLORDADJ$社会主義共和国"
+ TRS_orthodox_socialism_SOV_constituent_republic_DEF: "トリエステ・$OVERLORDADJ$社会主義共和国"
+ TRS_orthodox_socialism_SOV_constituent_republic_ADJ: "トリエステ・$OVERLORD$"
+ TRS_orthodox_socialism_SOV_constituent_federative_republic: "トリエステ・$OVERLORDADJ$社会主義連邦共和国"
+ TRS_orthodox_socialism_SOV_constituent_federative_republic_DEF: "トリエステ・$OVERLORDADJ$社会主義連邦共和国"
+ TRS_orthodox_socialism_SOV_constituent_federative_republic_ADJ: "トリエステ・$OVERLORD$"
+ TRS_orthodox_socialism_SOV_constituent_autonomous_republic: "トリエステ自治$OVERLORDADJ$社会主義共和国"
+ TRS_orthodox_socialism_SOV_constituent_autonomous_republic_DEF: "トリエステ自治$OVERLORDADJ$社会主義共和国"
+ TRS_orthodox_socialism_SOV_constituent_autonomous_republic_ADJ: "トリエステ・$OVERLORD$"
+ TRS_progressive_socialism_SOV_constituent_republic: "トリエステ・$OVERLORDADJ$社会主義共和国"
+ TRS_progressive_socialism_SOV_constituent_republic_DEF: "トリエステ・$OVERLORDADJ$社会主義共和国"
+ TRS_progressive_socialism_SOV_constituent_republic_ADJ: "トリエステ・$OVERLORD$"
+ TRS_progressive_socialism_SOV_constituent_federative_republic: "トリエステ・$OVERLORDADJ$社会主義連邦共和国"
+ TRS_progressive_socialism_SOV_constituent_federative_republic_DEF: "トリエステ・$OVERLORDADJ$社会主義連邦共和国"
+ TRS_progressive_socialism_SOV_constituent_federative_republic_ADJ: "トリエステ・$OVERLORD$"
+ TRS_progressive_socialism_SOV_constituent_autonomous_republic: "トリエステ自治$OVERLORDADJ$社会主義共和国"
+ TRS_progressive_socialism_SOV_constituent_autonomous_republic_DEF: "トリエステ自治$OVERLORDADJ$社会主義共和国"
+ TRS_progressive_socialism_SOV_constituent_autonomous_republic_ADJ: "トリエステ・$OVERLORD$"
+ 
 #アフリカ:
  AFR_SOV_constituent_republic: "アフリカ・$OVERLORDADJ$共和国"
  AFR_SOV_constituent_republic_DEF: "アフリカ・$OVERLORDADJ$共和国"
@@ -15859,6 +15887,62 @@
  WIW_progressive_socialism_SOV_constituent_autonomous_republic_DEF: "ウィンドワード諸島自治$OVERLORDADJ$社会主義共和国"
  WIW_progressive_socialism_SOV_constituent_autonomous_republic_ADJ: "ウィンドワード諸島・$OVERLORD$"
  
+ PTG_SOV_constituent_republic: "パタゴニア・$OVERLORDADJ$共和国"
+ PTG_SOV_constituent_republic_DEF: "パタゴニア・$OVERLORDADJ$共和国"
+ PTG_SOV_constituent_republic_ADJ: "パタゴニア・$OVERLORD$"
+ PTG_SOV_constituent_federative_republic: "パタゴニア・$OVERLORDADJ$連邦共和国"
+ PTG_SOV_constituent_federative_republic_DEF: "パタゴニア・$OVERLORDADJ$連邦共和国"
+ PTG_SOV_constituent_federative_republic_ADJ: "パタゴニア・$OVERLORD$"
+ PTG_SOV_constituent_autonomous_republic: "パタゴニア自治$OVERLORDADJ$共和国"
+ PTG_SOV_constituent_autonomous_republic_DEF: "パタゴニア自治$OVERLORDADJ$共和国"
+ PTG_SOV_constituent_autonomous_republic_ADJ: "パタゴニア・$OVERLORD$"
+ PTG_orthodox_socialism_SOV_constituent_republic: "パタゴニア・$OVERLORDADJ$社会主義共和国"
+ PTG_orthodox_socialism_SOV_constituent_republic_DEF: "パタゴニア・$OVERLORDADJ$社会主義共和国"
+ PTG_orthodox_socialism_SOV_constituent_republic_ADJ: "パタゴニア・$OVERLORD$"
+ PTG_orthodox_socialism_SOV_constituent_federative_republic: "パタゴニア・$OVERLORDADJ$社会主義連邦共和国"
+ PTG_orthodox_socialism_SOV_constituent_federative_republic_DEF: "パタゴニア・$OVERLORDADJ$社会主義連邦共和国"
+ PTG_orthodox_socialism_SOV_constituent_federative_republic_ADJ: "パタゴニア・$OVERLORD$"
+ PTG_orthodox_socialism_SOV_constituent_autonomous_republic: "パタゴニア自治$OVERLORDADJ$社会主義共和国"
+ PTG_orthodox_socialism_SOV_constituent_autonomous_republic_DEF: "パタゴニア自治$OVERLORDADJ$社会主義共和国"
+ PTG_orthodox_socialism_SOV_constituent_autonomous_republic_ADJ: "パタゴニア・$OVERLORD$"
+ PTG_progressive_socialism_SOV_constituent_republic: "パタゴニア・$OVERLORDADJ$社会主義共和国"
+ PTG_progressive_socialism_SOV_constituent_republic_DEF: "パタゴニア・$OVERLORDADJ$社会主義共和国"
+ PTG_progressive_socialism_SOV_constituent_republic_ADJ: "パタゴニア・$OVERLORD$"
+ PTG_progressive_socialism_SOV_constituent_federative_republic: "パタゴニア・$OVERLORDADJ$社会主義連邦共和国"
+ PTG_progressive_socialism_SOV_constituent_federative_republic_DEF: "パタゴニア・$OVERLORDADJ$社会主義連邦共和国"
+ PTG_progressive_socialism_SOV_constituent_federative_republic_ADJ: "パタゴニア・$OVERLORD$"
+ PTG_progressive_socialism_SOV_constituent_autonomous_republic: "パタゴニア自治$OVERLORDADJ$社会主義共和国"
+ PTG_progressive_socialism_SOV_constituent_autonomous_republic_DEF: "パタゴニア自治$OVERLORDADJ$社会主義共和国"
+ PTG_progressive_socialism_SOV_constituent_autonomous_republic_ADJ: "パタゴニア・$OVERLORD$"
+ 
+ ARC_SOV_constituent_republic: "アラウカニア・$OVERLORDADJ$共和国"
+ ARC_SOV_constituent_republic_DEF: "アラウカニア・$OVERLORDADJ$共和国"
+ ARC_SOV_constituent_republic_ADJ: "アラウカニア・$OVERLORD$"
+ ARC_SOV_constituent_federative_republic: "アラウカニア・$OVERLORDADJ$連邦共和国"
+ ARC_SOV_constituent_federative_republic_DEF: "アラウカニア・$OVERLORDADJ$連邦共和国"
+ ARC_SOV_constituent_federative_republic_ADJ: "アラウカニア・$OVERLORD$"
+ ARC_SOV_constituent_autonomous_republic: "アラウカニア自治$OVERLORDADJ$共和国"
+ ARC_SOV_constituent_autonomous_republic_DEF: "アラウカニア自治$OVERLORDADJ$共和国"
+ ARC_SOV_constituent_autonomous_republic_ADJ: "アラウカニア・$OVERLORD$"
+ ARC_orthodox_socialism_SOV_constituent_republic: "アラウカニア・$OVERLORDADJ$社会主義共和国"
+ ARC_orthodox_socialism_SOV_constituent_republic_DEF: "アラウカニア・$OVERLORDADJ$社会主義共和国"
+ ARC_orthodox_socialism_SOV_constituent_republic_ADJ: "アラウカニア・$OVERLORD$"
+ ARC_orthodox_socialism_SOV_constituent_federative_republic: "アラウカニア・$OVERLORDADJ$社会主義連邦共和国"
+ ARC_orthodox_socialism_SOV_constituent_federative_republic_DEF: "アラウカニア・$OVERLORDADJ$社会主義連邦共和国"
+ ARC_orthodox_socialism_SOV_constituent_federative_republic_ADJ: "アラウカニア・$OVERLORD$"
+ ARC_orthodox_socialism_SOV_constituent_autonomous_republic: "アラウカニア自治$OVERLORDADJ$社会主義共和国"
+ ARC_orthodox_socialism_SOV_constituent_autonomous_republic_DEF: "アラウカニア自治$OVERLORDADJ$社会主義共和国"
+ ARC_orthodox_socialism_SOV_constituent_autonomous_republic_ADJ: "アラウカニア・$OVERLORD$"
+ ARC_progressive_socialism_SOV_constituent_republic: "アラウカニア・$OVERLORDADJ$社会主義共和国"
+ ARC_progressive_socialism_SOV_constituent_republic_DEF: "アラウカニア・$OVERLORDADJ$社会主義共和国"
+ ARC_progressive_socialism_SOV_constituent_republic_ADJ: "アラウカニア・$OVERLORD$"
+ ARC_progressive_socialism_SOV_constituent_federative_republic: "アラウカニア・$OVERLORDADJ$社会主義連邦共和国"
+ ARC_progressive_socialism_SOV_constituent_federative_republic_DEF: "アラウカニア・$OVERLORDADJ$社会主義連邦共和国"
+ ARC_progressive_socialism_SOV_constituent_federative_republic_ADJ: "アラウカニア・$OVERLORD$"
+ ARC_progressive_socialism_SOV_constituent_autonomous_republic: "アラウカニア自治$OVERLORDADJ$社会主義共和国"
+ ARC_progressive_socialism_SOV_constituent_autonomous_republic_DEF: "アラウカニア自治$OVERLORDADJ$社会主義共和国"
+ ARC_progressive_socialism_SOV_constituent_autonomous_republic_ADJ: "アラウカニア・$OVERLORD$"
+ 
 #大洋州:
  ATC_SOV_constituent_republic: "南極・$OVERLORDADJ$共和国"
  ATC_SOV_constituent_republic_DEF: "南極・$OVERLORDADJ$共和国"
@@ -17921,6 +18005,22 @@
 #アジア:
 #ヨーロッパ:
  
+ 
+ SIB_democratic_republic_SOV: "シベリア民主共和国"
+ SIB_democratic_republic_SOV_DEF: "シベリア民主共和国"
+ SIB_democratic_republic_SOV_ADJ: "シベリア"
+ SIB_democratic_republic_SOV_colony: "$OVERLORDADJ$領シベリア民主共和国"
+ SIB_democratic_republic_SOV_colony_DEF: "$OVERLORDADJ$領シベリア民主共和国"
+ SIB_democratic_republic_SOV_colony_ADJ: "シベリア・$OVERLORD$"
+ SIB_democratic_republic_SOV_protected_territory: "$OVERLORDADJ$保護領シベリア民主共和国"
+ SIB_democratic_republic_SOV_protected_territory_DEF: "$OVERLORDADJ$保護領シベリア民主共和国"
+ SIB_democratic_republic_SOV_protected_territory_ADJ: "シベリア・$OVERLORD$"
+ SIB_democratic_republic_SOV_trust_territory: "$OVERLORDADJ$信託統治領シベリア民主共和国"
+ SIB_democratic_republic_SOV_trust_territory_DEF: "$OVERLORDADJ$信託統治領シベリア民主共和国"
+ SIB_democratic_republic_SOV_trust_territory_ADJ: "シベリア・$OVERLORD$"
+ SIB_democratic_republic_SOV_mandated_territory_A: "$OVERLORDADJ$委任統治領シベリア民主共和国"
+ SIB_democratic_republic_SOV_mandated_territory_A_DEF: "$OVERLORDADJ$委任統治領シベリア民主共和国"
+ SIB_democratic_republic_SOV_mandated_territory_A_ADJ: "シベリア・$OVERLORD$"
  
 #アフリカ:
 #新大陸:
