--- a/localisation/japanese/map/country_names/geacps_dependent_territory_names_USA_l_japanese.yml
+++ b/localisation/japanese/map/country_names/geacps_dependent_territory_names_USA_l_japanese.yml
@@ -2943,6 +2943,12 @@
  ZPR_USA_territory_DEF: "ザポロージャ準州"
  ZPR_USA_territory_ADJ: "$OVERLORD$領ザポロージャ"
  
+ TRS_USA_commonwealth: "トリエステ自治連邦区"
+ TRS_USA_commonwealth_DEF: "トリエステ自治連邦区"
+ TRS_USA_territory: "トリエステ準州"
+ TRS_USA_territory_DEF: "トリエステ準州"
+ TRS_USA_territory_ADJ: "$OVERLORD$領トリエステ"
+ 
 #アフリカ:
  AFR_USA_commonwealth: "アフリカ自治連邦区"
  AFR_USA_commonwealth_DEF: "アフリカ自治連邦区"
@@ -3406,6 +3412,18 @@
  WIW_USA_territory: "ウィンドワード諸島準州"
  WIW_USA_territory_DEF: "ウィンドワード諸島準州"
  WIW_USA_territory_ADJ: "$OVERLORD$領ウィンドワード諸島"
+ 
+ PTG_USA_commonwealth: "パタゴニア自治連邦区"
+ PTG_USA_commonwealth_DEF: "パタゴニア自治連邦区"
+ PTG_USA_territory: "パタゴニア準州"
+ PTG_USA_territory_DEF: "パタゴニア準州"
+ PTG_USA_territory_ADJ: "$OVERLORD$領パタゴニア"
+ 
+ ARC_USA_commonwealth: "アラウカニア自治連邦区"
+ ARC_USA_commonwealth_DEF: "アラウカニア自治連邦区"
+ ARC_USA_territory: "アラウカニア準州"
+ ARC_USA_territory_DEF: "アラウカニア準州"
+ ARC_USA_territory_ADJ: "$OVERLORD$領アラウカニア"
  
 #大洋州:
  ATC_USA_commonwealth: "南極自治連邦区"
@@ -3877,6 +3895,9 @@
  
  JER_bailiwick_USA_commonwealth: "ジャージー代官管轄区"
  JER_bailiwick_USA_commonwealth_DEF: "ジャージー代官管轄区"
+ 
+ SIB_democratic_republic_USA_commonwealth: "シベリア民主共和国"
+ SIB_democratic_republic_USA_commonwealth_DEF: "シベリア民主共和国"
  
 #アフリカ:
 #新大陸:
