--- a/localisation/japanese/generic/geacps_bookmarks_l_japanese.yml
+++ b/localisation/japanese/generic/geacps_bookmarks_l_japanese.yml
@@ -3,24 +3,24 @@
  THE_GORIOUS_FAR_EAST_EMPIRE_NAME:0 "栄光ある極東の帝国"
  THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 "昭和16年、太平洋において我が国は米國と戦闘状態に入る。この聖戦に勝ち抜いた我が国は、八紘一宇・東亜新秩序の下に大東亞共榮圈を建設した。\n太陽の沈まぬ国となった我が国であったが、問題が山積しているのも確かである。\n政党政治への不信や軍部の台頭、未だ終わらぬ支那事変、植民地での独立運動、そして、未回収の極東を取り戻すべく肥大化する赤き帝国と密かに報復を狙う自由の帝国...\n\n果たして我が国の未来は繁栄か没落か"
  
- THE_CHAOS_OF_EUROPE_NAME:0 "混沌に包まれし欧州"
- THE_CHAOS_OF_EUROPE_DESC:0 "欧州は混沌に包まれている...\n先の大戦で肥大化したドイツとイタリア、及びそれらの同盟国の撃破に成功した。しかし、各戦勝国の独自路線が仇となり、戦後の新秩序の建設には失敗してしまった。後に「冷戦」と呼ばれることとなるこの構造は、イギリスとフランス、そして赤き帝国との間に暗い影を落とし続けている。以前の支配者は大きく三つに分断され、その最大の同盟国は南部が支配から脱した。\n今やバルト海のシュチェチンからアドリア海のトリエステの間で欧州は二分され、さらに一方では海峡を超えた対立が激化しようとしているのであった..."
+ EIGHT_CROWN_CORDS_ONE_ROOF_NAME:0 "八紘一宇の夢"
+ EIGHT_CROWN_CORDS_ONE_ROOF_DESC:0 "昭和16年、太平洋において我が国は米国と戦闘状態に入った。\nこの聖戦を勝ち抜いた我が国は、八紘一宇・東亜新秩序の理念の下に大東亜共栄圏を建設し、ついに「太陽の沈まぬ国」となった。\n\nしかし、繁栄の影に課題は山積している。\n政党政治への不信と軍部の台頭、未だ終息を見ぬ支那事変、各地で広がる独立運動。さらに、極東を狙う赤き帝国、そして報復を密かに誓う自由の帝国――帝国の未来は未だ安泰ではない。\n\n一方、欧州は混沌に沈んでいる。\n戦勝国はドイツ・イタリアを撃破したが、各国の独自路線が災いし、新たな秩序の構築には失敗した。\nやがて「冷戦」と呼ばれることとなる対立構造は、イギリス・フランス・赤き帝国の間に深い亀裂を生み出し、バルト海のシュチェチンからアドリア海のトリエステに至るまで欧州を二分している。海峡を挟んだ対立もまた激化の兆しを見せていた。\n\n大東亜共栄圏と欧州の新秩序――。\n今まさに、世界の命運を決する時が訪れようとしている。"
  
 # 各国の説明
  POL_start_desc:0 ""
  ITA_start_desc:0 ""
  RUS_start_desc:0 ""
  FRA_start_desc:0 ""
- JAP_start_desc:0 "大日本帝国は先のアメリカ合衆国との戦争に勝利した。戦前,日本と米国と深い関係を持ち両国に挟まれた「ハワイ王国」は長年提案し続けていた日本との連邦化を達成した。\n\n西方では未だ戦いは続いているが北方ではソ連に対して蜂起したトランスバイカルとの条約により北樺太を獲得し, 南方では米英仏蘭植民地へ様々な形で影響拡大に成功した。\n\n極東…すなわち日昇る場所に位置する島国は近代化し始めて100年経たずして大国となった。我々はこの太陽を沈めることなく繁栄させねばならない。\n\n天皇陛下万歳！大日本帝国万歳！"
- GBR_start_desc:0 "グレートブリテン連合王国は辛うじて勝利を収めたものの、問題が山積しているのも事実である。隣国との関係悪化や鉄のカーテンを隔てた向こう側との関係、脱植民地化の加速等の問題に対して、クレメント・アトリー率いる労働党はどう対処するのだろうか……？"
+ JAP_start_desc: "大日本帝国は、かつてのアメリカ合衆国との戦争に勝利した。\n戦前、日本と米国の間に位置し両国と深い関係を持っていたハワイ王国は、長年の提案を経て日本との連邦化を達成した。\n\n西方では戦いがなお続くものの、北方ではソ連に対して蜂起したトランスバイカルとの条約により北樺太を獲得し、南方では米英仏蘭の植民地に対して様々な形で影響力を拡大することに成功した。\n\n極東、すなわち日の昇る場所に位置する島国は、近代化を始めてから100年未満で大国となった。\n我々は、この太陽を沈めることなく繁栄させねばならない。\n\n天皇陛下万歳！大日本帝国万歳！"
+ GBR_start_desc: "グレートブリテン連合王国は、かろうじて第二次世界大戦において勝利を収めたものの、その戦いによって生じた様々な問題が山積しているのもまた事実である。\n戦争による経済的疲弊や、隣国との外交関係の悪化、さらに鉄のカーテンを隔てた東側諸国との緊張関係は、国民生活や政策決定に大きな影響を及ぼしている。\n\n加えて、脱植民地化の進展が急速に進む中で、かつて帝国の支配下にあった諸地域との関係をどう維持・調整していくかという課題も避けられない。\n\nこうした困難な状況の中、クレメント・アトリー率いる労働党は、国内の混乱や国際的圧力にどのように立ち向かい、国の安定と繁栄をどのように守るのか――その決断と行動が、今まさに問われている。"
  USA_start_desc:0 ""
  WGR_start_desc:0 ""
  
- CZE_start_desc:0 "今のところ英仏からは亡命政府主体の政府が認識されているが、議会では共産党と社会民主党を中核とした国民戦線が議席のおよそ3分の1を占め、元パルチザンを主力とした武装部隊をもって国内の「秩序維持」を行っている。\n適切な対処を行わなければ、共和国に戻りつつある民主主義の炎は消え、そこには冷ややかな風だけが吹き荒れる……"
+ CZE_start_desc: "今のところ、英仏からは亡命政府主体の政府が承認されているが、議会では共産党と社会民主党を中核とした国民戦線が議席のおよそ3分の1を占めている。\n元パルチザンを主力とした武装部隊が国内の「秩序維持」にあたっている。\n\n適切な対処を行わなければ、共和国に戻りつつある民主主義の炎は消え、そこには冷ややかな風だけが吹き荒れることになる……"
  GRE_start_desc:0 ""
  SIC_start_desc:0 ""
  
- CHI_start_desc:0 "1937年の夏より勃発した日中戦争は、十年近くの歳月を経た現在においても継続している。\n\nしかし、大日本帝国率いる大東亜共栄圏との長きにわたる戦争について、国民党率いる中央政府は未だ勝利への道をあきらめていない一方で、中華民国の国力は疲弊し、もはや国内の軍閥は中央政府の指示に従おうとはしていない。\n\nその上中華統一戦線の加盟国も、戦線離脱を望んでおり、各国は自国の戦力をいかに温存すべきかについて注力している。\n\n残念なことに中華民国の影響力が低下しつつある現状では、大東亜共栄圏に打ち勝つという当初の目標はもはや不可能であるというのが国際世論の見解である。"
+ CHI_start_desc: "1937年の夏に勃発した日中戦争は、十年近くの歳月を経た現在においてもなお継続している。\n\nしかし、大日本帝国率いる大東亜共栄圏との長きにわたる戦争について、国民党率いる中央政府は未だ勝利への道を諦めていない。一方で、中華民国の国力は疲弊し、国内の軍閥も中央政府の指示に従おうとはしていない。\n\nさらに、中華統一戦線の加盟国も戦線離脱を望んでおり、各国は自国の戦力をいかに温存すべきかに注力している。\n\n残念ながら、中華民国の影響力が低下しつつある現状では、大東亜共栄圏に打ち勝つという当初の目標はもはや不可能である、というのが国際世論の見解である。"
  FEA_start_desc:0 ""
  
  COUNTRY_start_desc:0 ""
